fix basic alignment

--- a/src/app/features/credential-details/credential-details.component.scss
+++ b/src/app/features/credential-details/credential-details.component.scss
@@ -51,21 +51,36 @@ transition: transform 0.2s ease-in-out;
 .page-container{
   padding: 50px 16px 24px 16px;
 }
+
+.flex-align-container{
+  gap: 24px;
+}
+
 mat-card.basic-actions-card{
   margin-bottom: 20px;
 }
 
-mat-card-content.basic-actions-container{
+mat-card-content.basic-actions-card-content{
+  padding-inline: 0px;
+}
+
+.basic-actions-container{
   display: flex;
   flex-direction: column;
-  gap: 30px;
 
   h2{
     margin-top: 0px;
   }
 }
 
+.side-flexing{
+  flex: 1 1 auto;
+  min-width: 300px;
+}
+
 .actions-container{
+    padding-inline: 16px 0px;
+
   h2{
     margin-bottom: 4px;
   }
@@ -78,6 +93,7 @@ mat-card-content.basic-actions-container{
   width: 100%;
   max-width: 400px;
   align-items: center;
+  padding-inline: 16px;
 }
 
 .basic-info span:nth-child(2),
@@ -96,7 +112,6 @@ mat-card-content.basic-actions-container{
 .specific-details-container {
   display: flex;
   flex-direction: column;
-  gap: 24px;
   max-width:100%;
 }
 
@@ -118,14 +133,12 @@ mat-card-content.basic-actions-container{
 
 .side-container{
   display: flex;
-  flex: 1 1 auto;
   flex-direction: column;
   gap: 1rem;
-  min-width: 300px;
 }
 
 .side-container h2{
-  padding: 0px 16px 0px 16px;
+  padding: 0px 16px;
 }
 
 .side-card {
@@ -158,72 +171,6 @@ mat-card-content.basic-actions-container{
 
 }
 
-
-// MEDIA QUERIES
-@media(width > 768px){
-  .page-container{
-    max-width: 1000px;
-    margin-inline: auto;
-    padding: 50px 20px 30px 20px;
-  }
-
-  mat-card-content.basic-actions-container{
-    flex-direction: row;
-    //todo: revisar alineament; es pot copiar estructurada de mandatee-mandator
-    gap: 17%;
-
-    h2{
-      margin-bottom: 8px;
-    }
-  }
-
-  .specific-details-container {
-    flex-direction: row;
-  }
-
-  .main-container {
-    flex: 1 1 65%;
-
-    mat-card{
-      height: 100%;
-    }
-    mat-card-content{
-      padding-top: 0px;
-    }
-
-  }
-
-  .side-container {
-    max-width: 400px;
-
-    &.signer{
-      max-height:fit-content;
-    }
-  }
-
-  .btn-reminder{
-    margin-top: auto;
-  }
-
-  .power-alert{
-    height:22px;
-  }
-
-}
-
-@media(width > 1150px){
-
-  .back-button{
-    top: 139px;
-    left: 23px;
-  }
-
-  .back-icon{
-    width: 40px;
-    height: 40px;
-    font-size: 40px;
-  }
-}
 
 
 // POWERS
@@ -260,8 +207,12 @@ mat-card-content.basic-actions-container{
 
   // BUTTONS
 .buttons-container{
-  display:flex;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 100%;
   gap: 12px;
+  padding-right: 16px;
 
   .mat-mdc-raised-button[disabled], .mat-mdc-raised-button.mat-mdc-button-disabled.cancel-button{
     background-color: rgba($Blue, 0.4);
@@ -270,12 +221,67 @@ mat-card-content.basic-actions-container{
 }
 
 
+// @media (width < 480px){
+//   .mat-mdc-form-field{
+//     width:150px;
+//   }
+// }
 
-
-@media (width < 480px){
-  .mat-mdc-form-field{
-    width:150px;
+// MEDIA QUERIES
+@media(width > 768px){
+  .page-container{
+    max-width: 1000px;
+    margin-inline: auto;
+    padding: 50px 20px 30px 20px;
   }
+  
+  .basic-actions-container{
+    flex-direction: row;
+    
+    h2{
+      margin-bottom: 8px;
+    }
+  }
+
+  .actions-container{
+    padding-inline: 0px;
+  }
+
+  .buttons-container{
+    justify-content: center;
+  }
+
+  .specific-details-container {
+    flex-direction: row;
+  }
+
+  .flex-align-main{
+    flex: 1 1 65%;
+  }
+
+  .main-container {
+
+    mat-card{
+      height: 100%;
+    }
+    mat-card-content{
+      padding-top: 0px;
+    }
+
+  }
+
+  .side-container {
+    max-width: 400px;
+
+    &.signer{
+      max-height:fit-content;
+    }
+  }
+
+  .power-alert{
+    height:22px;
+  }
+
 }
 
 @media(width > 1150px){
